[package]
name = "gitignore-downloader"
version = "1.0.0"
edition = "2024"
description = "Fetch and compose GitHub .gitignore templates from the terminal."
license = "MIT"
repository = "https://github.com/cesarferreira/gitignore"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
reqwest = { version = "0.11.26", features = ["blocking", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[[bin]]
name = "gi"
path = "src/main.rs"
